# agent-bridge-platform

./: .gitignore  Cargo.toml  README.md  mermaid.drawio  project-desc.md  scratch.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  messages.rs  utils.rs
common/src/models/: mod.rs  session.rs
config/: default.toml
tests/: jwt_authj_test.rs  websocket_auth_test.rs
web-server/: Cargo.toml
web-server/src/: client_registry.rs  main.rs  proxy.rs  static_files.rs
web-server/src/api/: mod.rs  sessions.rs
web-server/src/auth/: mod.rs
web-server/src/middleware/: mod.rs  rate_limiter.rs
web-server/src/utils/: mod.rs  token.rs
websocket-server/: Cargo.toml
websocket-server/src/: main.rs  routing.rs
websocket-server/src/actors/: agent_actor.rs  client_session_actor.rs  mod.rs  router_actor.rs  state_manager.rs
