[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Shared library code for Agent Bridge Platform"
authors = ["Hdpbilly"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
dashmap = "5"
chrono = "0.4"
config ="0.13"
jsonwebtoken = "8.1"
