[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
description = "Web server for Agent Bridge Platform"
authors = ["Hdpbilly"]

# web-server/Cargo.toml dependencies section
[dependencies]
common = { path = "../common" }
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
mime_guess = "2.0"
mime = "0.3"  # Explicitly add the mime crate
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
tungstenite = "0.18.0"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
url = "2.3"
actix-web-lab = "0.20"
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.13"
futures-util = "0.3"
actix-service = "2.0"
jsonwebtoken = "8.1"
pin-project-lite = "0.2"